devex-1990, fix order book destop(by Mark)

--- a/src/app/dashboard/components/order-book/order-book.component.scss
+++ b/src/app/dashboard/components/order-book/order-book.component.scss
@@ -331,3 +331,11 @@
   width: 100%;
   align-items: center;
 }
+.jc-end {
+    justify-content: flex-end;
+    margin-right: 15px;
+}
+
+// .jc-center {
+//     justify-content: center;
+// }
