--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -125,7 +125,7 @@
                   </span>
                 </div>
               </div>
-              <div style="height: 4px;"></div>
+              <!-- <div style="height: 4px;"></div> -->
             </ng-container>
           </cdk-virtual-scroll-viewport>
         </div>
