--- a/src/app/popups/news-subscribe-popup/news-subscribe-popup.component.html
+++ b/src/app/popups/news-subscribe-popup/news-subscribe-popup.component.html
@@ -12,41 +12,62 @@
 
 		<h6 class="popup__title popup_title--dm">Subscribe to news</h6>
 		<!-- login user -->
-		<h4 class="popup__subtitle popup_title--dm">Mailing will be made to the email specified during registration</h4>
+		<h4 class="popup__subtitle popup_title--dm" *ngIf="!resErrorMesage">Mailing will be made to the email specified during registration</h4>
 		<!-- end login user -->
 		<!-- not login user -->
-		<h4 class="popup__subtitle popup_title--dm">Enter email to subscribe to news</h4>
+		<h4 class="popup__subtitle popup_title--dm">{{!resErrorMesage ? 'Enter email to subscribe to news' : resErrorMesage}}</h4>
 		<!-- end not login user -->
 
 		<!-- login user -->
-		<form class="popup__form">
+		<form class="popup__form" [formGroup]="emailForm">
 			<div>
 				<div class="wrap-input popup__wrap-input">
-					<input class="wrap-input__input" type="text"
-					required>
-					<label class="wrap-input__label" for="">
+					<input class="wrap-input__input"
+                 type="text"
+                 formControlName="email"
+                 required>
+					<label class="wrap-input__label" for=""
+                 [ngClass]="{'wrap-input--error': !emailControl.valid
+								&& emailControl.touched
+								&& emailControl.errors != null}">
 					{{'Email' | translate}}
 				</label>
 				<div class="wrap-input__line">
 			</div>
 			<div>
-			<div class="input-hint-wrapper">
-				<span
-				class="wrap-input__message wrap-input__message--error">
-				{{'This field is required.' | translate}}
-			</span>
-			<span
-			class=" wrap-input__message wrap-input__message--error">
-			{{'Please, enter valid email address.' | translate}}
-		</span>
-	</div>
+        <div class="input-hint-wrapper">
+          <div *ngIf="!emailControl.valid && emailControl.touched">
+										<span class="wrap-input__message"
+                          *ngIf="emailControl.errors['required'] && emailControl.touched">
+										{{'Email is required' | translate}}
+									</span>
+            <span class="wrap-input__message"
+                  *ngIf="emailControl.errors['emailInvalid']
+									&& emailControl.touched
+									&& !emailControl.errors['required']
+									&& !emailControl.errors['specialCharacter']">
+									{{'Wrong email' | translate}}
+								</span>
+            <span class="wrap-input__message"
+                  *ngIf="emailControl.errors['specialCharacter']
+								&& !emailControl.errors['required']">
+								{{'Email cannot contain special characters except period (.), plus (+), underscore (_) and dash (-)' | translate}}
+							</span>
+            <span class="wrap-input__message"
+                  *ngIf="emailControl.errors['maxlength']
+							&& !emailControl.errors['required']
+							&& !emailControl.errors['emailInvalid']">
+							{{'Email cannot be more than 40 characters long' | translate}}
+						</span>
+          </div>
+        </div>
 </div>
 </div>
 </div>
 </form>
 <!-- login user -->
 <button class="btn popup__btn popup__btn--active"
-(click)="openThankPopup()"
->Thank</button>
+(click)="sendEmail()"
+>Subscribe</button>
 </div>
 </div>
