--- a/src/app/popups/news-thank-you-popup/news-thank-you-popup.component.html
+++ b/src/app/popups/news-thank-you-popup/news-thank-you-popup.component.html
@@ -17,11 +17,11 @@
 
 <div class="overlay">
 	<div class="popup popup-subscribe-thank">
-		<div class="popup__close" (click)="closeSubPopup()"></div>
+		<div class="popup__close" (click)="closeThankPopup()"></div>
 		<h6 class="popup__title popup_title--dm">Thanks for subscribing!</h6>
 		<h4 class="popup__subtitle popup_title--dm">News will be sent to the specified email</h4>
 		<button class="btn popup__btn popup__btn--active"
-		(click)="closeSubPopup()"
-		>Thank</button>
+		(click)="closeThankPopup()"
+		>Cancel</button>
 	</div>
 </div>
