destop markup (no pixel perfect)

--- a/src/app/adviser/adviser.component.html
+++ b/src/app/adviser/adviser.component.html
@@ -1,3 +1,251 @@
-<p>
-  adviser works!
-</p>
+<div class="adviser-container">
+	<div class="first-screen">
+		<div class="fs-image-container">
+			<img src="assets/img/advisor-bg.png" alt="">
+		</div>
+		<div class="title-wr">	
+			<h1>Advisor Exrates Exchange</h1>
+		</div>
+	</div>
+	<div class="content-part">
+		<div class="left-col">
+			<div class="left-item">
+				<div class="pic-container">
+					<img src="assets/img/advisor-ava.png" alt="">
+				</div>
+				<div class="name">
+					<span>Jana Christian</span>
+				</div>
+				<div class="profesion">
+					<span>Verified Advisor</span>
+				</div>
+				<div class="description">
+					<p>CEO at The Currency Analytics, CMO , Advisor and Brand Ambassador / specialized in marketing - Cryptocurrency</p>
+				</div>
+				<div class="button-wr">
+					<button class="standart-btn"><span>Chat in telegram</span></button>
+				</div>
+				<div class="linkedin-profile">
+					<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M16 9.72918V15.6445H12.5707V10.1254C12.5707 8.7389 12.0747 7.7927 10.8334 7.7927C9.88579 7.7927 9.32189 8.43037 9.07381 9.04721C8.98334 9.26772 8.96006 9.57466 8.96006 9.88333V15.6445H5.52958C5.52958 15.6445 5.57579 6.29689 5.52958 5.32841H8.95972V6.79067C8.95276 6.8016 8.94372 6.8134 8.93718 6.824H8.95972V6.79067C9.41545 6.08876 10.2293 5.08605 12.051 5.08605C14.308 5.08602 16 6.56048 16 9.72918ZM1.94116 0.355545C0.767605 0.355545 0 1.12531 0 2.13757C0 3.12778 0.745397 3.9209 1.89563 3.9209H1.91855C3.11484 3.9209 3.85882 3.12793 3.85882 2.13757C3.83628 1.12531 3.11484 0.355545 1.94116 0.355545ZM0.20374 15.6445H3.63291V5.32841H0.20374V15.6445Z" fill="#94C2FF"/>
+					</svg>
+					<a href="#"><span>View profile</span></a>
+				</div>	
+				<div class="member">
+					<p>MEMBER SINCE: JANUARY 23, 2018</p>
+				</div>
+			</div>	
+		</div>
+		<div class="center-col">
+			<div class="advisor-navigation">
+				<nav>
+					<ul class="advisor-navigation-wr">
+						<li class="advisor-navigation-item active">
+							<a href="#">Advisor Responsibilities </a>
+						</li>
+						<li class="advisor-navigation-item">
+							<a href="#">Services</a>
+						</li>
+						<li class="advisor-navigation-item">
+							<a href="#">About Exrates</a>
+						</li>
+						<li class="advisor-navigation-item">
+							<a href="#">Road Map</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+			<div class="respons scroll-block" id="respons">
+				<div class="respons-inner">
+					<div class="respons-item">
+						<div class="list-title">
+							<h4>Advisor in charge:</h4>
+						</div>
+						<ul class="advisor-list">
+							<li><span>CEO at The Currency Analytics, CMO</span></li>
+							<li><span>Advisor and Brand Ambassador</span></li>
+							<li><span>Specialized in marketing - Cryptocurrency / Forex</span></li>
+							<li><span>Special offer</span></li>
+						</ul>
+					</div>		
+					<div class="respons-item">
+						<div class="list-title">
+							<h4>Advisor in charge:</h4>
+						</div>
+						<ul class="advisor-list">
+							<li><span>CEO at The Currency Analytics, CMO</span></li>
+							<li><span>Advisor and Brand Ambassador</span></li>
+							<li><span>Specialized in marketing - Cryptocurrency / Forex</span></li>
+							<li><span>Special offer</span></li>
+						</ul>
+					</div>
+					<div class="respons-item">
+						<div class="list-title">
+							<h4>Advisor in charge:</h4>
+						</div>
+						<div class="list-txt">
+							<p>All payments about listing are done on wallet sadf324235ADSfsadfDF, after agreement that is</p>
+						</div>
+					</div>	
+				</div>	
+			</div>
+			<div class="servise scroll-block" id="servise">
+				<div class="title-wr">
+					<h3>Services</h3>
+				</div>
+				<div class="servise-item">
+					<img src="assets/img/servise-banner.png" alt="">
+				</div>
+				<div class="servise-item">
+					<img src="assets/img/servise-banner.png" alt="">
+				</div>
+				<div class="servise-item">
+					<img src="assets/img/servise-banner.png" alt="">
+				</div>
+
+			</div>
+			<div class="about-block scroll-block" id="about-block">
+				<div class="title-wr">
+					<h3>About Exrates</h3>
+				</div>
+				<div class="about-item-wr">
+					<div class="about-item">
+						<div class="item-title">
+							<h5>Text Article</h5>
+						</div>
+						<div class="item-description">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						</div>
+					</div>
+					<div class="about-item">
+						<div class="item-title">
+							<h5>Text Article</h5>
+						</div>
+						<div class="item-description">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						</div>
+					</div>
+					<div class="about-item">
+						<div class="item-title">
+							<h5>Text Article</h5>
+						</div>
+						<div class="item-description">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						</div>
+					</div>
+					<div class="about-item">
+						<div class="item-title">
+							<h5>Text Article</h5>
+						</div>
+						<div class="item-description">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						</div>
+					</div>
+					<div class="about-item">
+						<div class="item-title">
+							<h5>Text Article</h5>
+						</div>
+						<div class="item-description">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						</div>
+					</div>
+					<div class="about-item">
+						<div class="item-title">
+							<h5>Text Article</h5>
+						</div>
+						<div class="item-description">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						</div>
+					</div>
+
+				</div>
+			</div>	
+			<div class="road-map scroll-block" id="road-map">
+				<div class="title-wr">
+					<h3>Road Map</h3>
+				</div>
+				<div class="road-map-item-wr">
+					<div class="road-item item-q">	
+						<span>Q1 2019</span>
+					</div>
+					<div class="road-item success">
+						<div class="successs-icon">
+							<svg width="16" height="13" viewBox="0 0 16 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<rect width="3" height="14.1641" rx="1.5" transform="matrix(-0.707107 -0.707107 -0.707107 0.707107 16.0002 2.55396)" fill="#237BEF"/>
+								<rect width="3" height="8.22082" rx="1.5" transform="matrix(-0.707107 0.707107 0.707107 0.707107 2.12131 4.63525)" fill="#237BEF"/>
+							</svg>
+						</div>	
+						<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod a aliqua.</span>
+					</div>
+					<div class="road-item success">
+						<div class="successs-icon">
+							<svg width="16" height="13" viewBox="0 0 16 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<rect width="3" height="14.1641" rx="1.5" transform="matrix(-0.707107 -0.707107 -0.707107 0.707107 16.0002 2.55396)" fill="#237BEF"/>
+								<rect width="3" height="8.22082" rx="1.5" transform="matrix(-0.707107 0.707107 0.707107 0.707107 2.12131 4.63525)" fill="#237BEF"/>
+							</svg>
+						</div>	
+						<span>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span>
+					</div>
+					<div class="road-item item-q">
+						<span>Q2 2019</span>
+					</div>
+					<div class="road-item">
+						<div class="successs-icon">
+							<svg width="16" height="13" viewBox="0 0 16 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<rect width="3" height="14.1641" rx="1.5" transform="matrix(-0.707107 -0.707107 -0.707107 0.707107 16.0002 2.55396)" fill="#237BEF"/>
+								<rect width="3" height="8.22082" rx="1.5" transform="matrix(-0.707107 0.707107 0.707107 0.707107 2.12131 4.63525)" fill="#237BEF"/>
+							</svg>
+						</div>	
+						<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod a aliqua.</span>
+					</div>
+					<div class="road-item">
+						<div class="successs-icon">
+							<svg width="16" height="13" viewBox="0 0 16 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<rect width="3" height="14.1641" rx="1.5" transform="matrix(-0.707107 -0.707107 -0.707107 0.707107 16.0002 2.55396)" fill="#237BEF"/>
+								<rect width="3" height="8.22082" rx="1.5" transform="matrix(-0.707107 0.707107 0.707107 0.707107 2.12131 4.63525)" fill="#237BEF"/>
+							</svg>
+						</div>	
+						<span>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="right-col">
+			<div class="form-part">
+				<div class="form-title">
+					<h3>Get report about your coin</h3>
+				</div>
+				<form action="#">
+					<div class="wrap-input popup__wrap-input">
+						<input class="wrap-input__input ng-dirty ng-valid ng-touched" required="" type="text">
+						<label class="wrap-input__label" for="">Project name</label>
+					</div>	
+					<div class="wrap-input popup__wrap-input">
+						<input class="wrap-input__input ng-dirty ng-valid ng-touched" required="" type="text">
+						<label class="wrap-input__label" for="">Your Telegram</label>
+					</div>
+					<div class="checkbox-wr">
+						<div class="check-item">
+							<input type="checkbox" value="Listing on 5 exchanges" id="exchanges5">
+							<label class="indicator" for="exchanges5"></label>
+							<label class="label-txt" for="exchanges5">Listing on 5 exchanges</label>
+						</div>
+						<div class="check-item">
+							<input type="checkbox" value="Listing on Exrates" id="exrates">
+							<label class="indicator" for="exrates"></label>
+							<label class="label-txt" for="exrates">Listing on Exrates	</label>
+						</div>
+						<div class="check-item">
+							<input type="checkbox" value="Listing + Marketing" id="marketing">
+							<label class="indicator" for="marketing"></label>
+							<label class="label-txt" for="marketing">Listing + Marketing</label>
+						</div>
+					</div>		
+					<div class="button-wr">
+						<button class="standart-btn reverse"><span>Get personal offer</span></button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+</div>
