--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -75,3 +75,6 @@
 @import "pages/ieo/_ieo-header.scss";
 @import "pages/ieo/_ieo-notification.scss";
 @import "pages/ieo/_ieo-policy.scss";
+
+//advisor
+@import "pages/_advisor.scss";
