fix partner news + preloader

--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,18 +1,19 @@
 <div class="partners-main">
 	<div class="partners-main__inner">
+		
 		<div class="partners-main__head">
 			<div class="partners-head">
 				<h1>Partner News</h1>
 			</div>
-			<div class="follow-btn">
+<!-- 			<div class="follow-btn">
 				<button class="follow" (click)="makeSubscription()">
 					<span>Folowing</span>
 				</button>
-			</div>
+			</div> -->
 		</div>
 		<div class="partners-body">
+			
 			<div class="partners-item-wr">
-
 				<div class="partnters-item">
 					<div class="partnters__additional-info">
 						<span>12 Jan 2019</span>
@@ -237,7 +238,23 @@
 					</div>
 				</div>
 				
-
+	
+			</div>
+			<div class="preloader-container active">
+				<div class="preloader-item">
+					<div class="preloader-line small-height">
+						<span></span>
+					</div>
+					<div class="preloader-line"></div>
+					<div class="preloader-line"></div>
+					<div class="preloader-line"></div>
+				</div>
+				<div class="preloader-item">
+					<div class="preloader-line small-height"><span></span></div>
+					<div class="preloader-line"></div>
+					<div class="preloader-line"></div>
+					<div class="preloader-line"></div>
+				</div>
 			</div>
 		</div>
 	</div>
