--- a/src/assets/scss/pages/partner-news/_partner-news.scss
+++ b/src/assets/scss/pages/partner-news/_partner-news.scss
@@ -41,8 +41,8 @@
 
 .partners-main{
 	font-size: calc(.581rem + .582vw);
-	padding-top: 1em;
-	padding-bottom: 5em;
+	padding-top: 1.4em;
+	padding-bottom: 1.5em;
 	button{
 		border: none;
 		background: none;
@@ -67,7 +67,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		margin-bottom: 1em;
+		margin-bottom: 1.7em;
 	}
 	.partners-head{
 		@media(max-width: 720px){
@@ -111,12 +111,13 @@
 		}
 	}
 	.partners-body{
-
+		position: relative;
 	}
 	.partners-item-wr{
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
+		margin-bottom: .75em;
 	}
 	.partnters-item{
 		max-width: 31.8em;
@@ -241,4 +242,119 @@
 		}
 	}
 
+}
+
+
+
+
+.preloader-container{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	background: #191A39;
+	position: relative;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	opacity: 0;
+	transition: .3s;
+	&.active{
+		opacity: 1;
+	}
+	.preloader-item{
+		max-width: 31.8em;
+		width: 48%;
+		padding-bottom: .5em;
+		padding-top: .2em;
+		margin-bottom: 1.1em;
+		@media(max-width: 720px){
+			// max-width: unset;
+			width: 100%;
+			&:last-child{
+				display: none;
+			}
+		}
+	}
+	.preloader-line{
+		height: .8em;
+		margin-bottom: .5em;
+		width: 27em;
+		max-width: 100%;
+		// background: rgba(196, 196, 196, .1);
+		position: relative;
+		overflow: hidden;
+		@media(max-width: 720px){
+			width: 100%;
+		}
+		span{
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			right: 0;
+			width: calc(100% - 3.5em);
+			z-index: 3;
+			background: #191A39;
+		}
+		&::before{
+			content: "";
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			background: rgba(196, 196, 196, .1);
+			width: 100%;
+			height: 100%;
+			display: block;
+		}
+		&::after{
+			content: "";
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			width: 3.5em;
+			transition: 1.5s;
+			background-image: linear-gradient(to right, rgba(196, 196, 196, 0) 0%, rgba(255, 255, 255, 0.1) 50%, rgba(196, 196, 196, 0) 100%);
+			left: 0;
+			animation: preloader-animate 3.8s infinite;
+		}
+		&.small-height{
+			height: .6em;
+			margin-bottom: .7em;
+			&::before{
+				width: 3.5em;
+			}
+		}
+	} 
+}
+
+
+
+@keyframes preloader-animate{
+	0%{
+		left: 0;
+	}
+	48%{
+		left: calc(100% - 3.5em);
+	}
+	52%{
+		left: calc(100% - 3.5em);
+	}
+	100%{
+		left: 0;
+	}
+}
+
+@keyframes small-preloader-animate{
+	0%{
+		left: 0;
+	}
+	10%{
+		left: 100%;
+	}
+	90%{
+		left: 100%;
+	}
+	100%{
+		left: 0;
+	}
 }
