--- a/src/assets/scss/pages/ieo/_common-ieo.scss
+++ b/src/assets/scss/pages/ieo/_common-ieo.scss
@@ -64,6 +64,28 @@
 		max-width: calc(51.2em + 40px);
 		margin: 0 auto;
 		padding: 1.1em 20px 1.2em;
+		.different-comunication{
+			display: flex;
+			    padding-top: 1em;
+			    align-items: center;
+			    margin-bottom: 1.3em;
+			.icon-wr{
+				width: auto;
+				    margin-right: 1.45em;
+			}
+			.description-wr{
+				width: auto;
+				    margin-right: 1.8em;
+				    padding: 0;
+			}
+			.wrap-input{
+				margin-right: .8em;
+				    width: 17em;
+			}
+			.link-wr{
+				padding: 0;
+			}
+		}
 		.comunication-block{
 
 		}
@@ -476,7 +498,7 @@
 		.security-block{
 			margin-bottom: 1.6em;
 			@media(max-width: 992px) {
-				    font-size: 1.3em;
+				font-size: 1.3em;
 			}
 		}
 		.s-title{
@@ -518,7 +540,7 @@
 		.adittional-block{
 			margin-bottom: 2.4em;
 			@media(max-width: 992px) {
-				    font-size: 1.3em;
+				font-size: 1.3em;
 			}
 		}
 		.a-title{
@@ -546,7 +568,7 @@
 			border-radius: 2px;
 			max-width: 23em;
 			@media(max-width: 992px) {
-				    font-size: 1.5em;
+				font-size: 1.5em;
 			}
 			p{
 				font-weight: normal;
