--- a/src/app/ieo/components/common-ieo/common-ieo.component.html
+++ b/src/app/ieo/components/common-ieo/common-ieo.component.html
@@ -194,11 +194,9 @@
 	<div class="ieo-list">
 		<div class="ieo-list-wr">
       <ng-container *ngFor="let item of ieoList">
-        <div class="ieo-list-item">
+        <div class="ieo-list-item {{item.status  | showStageStatus:true | lowercase}}">
           <div class="img-part">
             <img src="assets/img/ieo/celler.png" alt="">
-            <div class="ieo-item-status {{item.status | lowercase}}"
-            [ngClass]="{'red': item.status}">{{item.status | showStageStatus}}</div>
           </div>
           <div class="info-coin-part">
             <div class="title-wr">
@@ -233,7 +231,7 @@
               <div class="button-wr">
                 <button
                   class="standart-btn"
-                  *ngIf="isAuthenticated"
+                  *ngIf="isAuthenticated && item.status === 'RUNNING'"
                   (click)="buyIeo(item)"
                 ><span>Buy {{item.currencyDescription}}</span></button>
               </div>
