--- a/src/app/ieo/components/common-ieo/common-ieo.component.html
+++ b/src/app/ieo/components/common-ieo/common-ieo.component.html
@@ -11,7 +11,7 @@
 				<p>A Token X-platform for transformative projects</p>
 			</div>
 			<div class="button-wr">
-				<button class="standart-btn"><span>Apply project to X-Platform</span></button>
+				<a href="https://forms.gle/Y18qX3Na3WmWiRnw9" class="standart-btn" target="blank"><span>Apply project to X-Platform</span></a>
 			</div>
 		</div>
 	</div>
@@ -37,7 +37,7 @@
 					<p>Notify me about upcoming projects in telegram chanel </p>
 				</div>
 				<div class="link-wr">
-					<a href="#">@botExratesme</a>
+					<a href="tg://resolve?domain=exratesme" target="blank">@botExratesme</a>
 				</div>
 			</div>
 			<div class="different-comunication">
@@ -119,7 +119,7 @@
 		</div>
 		<div class="bottom-part">
 			<div class="link-wr">
-				<a href="#">@botExratesme</a>
+				<a href="tg://resolve?domain=exratesme" target="blank">@botExratesme</a>
 			</div>
 		</div>
 	</div>
