--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -376,6 +376,8 @@
   border: none;
   cursor: pointer;
   border: 1px solid #237BEF;
+      display: block;
+    text-decoration: none;
   &.reverse{
     border: 1px solid #237BEF;
     background-color: transparent;
